--- a/style.css
+++ b/style.css
@@ -58,6 +58,7 @@ footer {
 
 body {
     background-image: url('img/background.png');
+    background-image: loading("eager");
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;
